# nortia

./: .gitignore  .vercelignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  not-found.tsx  page.tsx
app/portfolio/: page.tsx
circuits/: Nargo.toml  README.md
circuits/browser-prover/: README.md  build.sh  go.mod  main.go
circuits/place_order/: Nargo.toml
circuits/redeem/: Nargo.toml
client/: package-lock.json  package.json  tsconfig.json
client/scripts/: generate-proof-fixtures.ts
client/src/: commitments.test.ts  commitments.ts  committee.test.ts  committee.ts  economics.test.ts  economics.ts  lmsr.test.ts  lmsr.ts  market-engine.test.ts  market-engine.ts  optimistic.test.ts  optimistic.ts  oracles.test.ts  oracles.ts  portfolio.test.ts  portfolio.ts  txline.test.ts  txline.ts  v2.test.ts  v2.ts
deployments/: README.md  devnet.json
deployments/rey-aws/: README.md
docs/plans/: 2026-07-19-devnet-demo-submission-plan.md  2026-07-19-full-product-completion-plan.md  2026-07-19-hackathon-master-plan.md  2026-07-19-solana-port-plan.md  (+5 more)
programs/moros_cup/: Cargo.toml
programs/moros_cup/src/: lib.rs  state.rs
programs/nortia/: Cargo.toml
programs/nortia/src/: constants.rs  error.rs  lib.rs  lmsr.rs  oracles.rs  state.rs  stork.rs  switchboard.rs  txline.rs  zk.rs
scripts/: bootstrap-local-env.mjs  deploy-devnet.sh  sync-idl.mjs
services/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
web/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.json
(+172 files in other folders)
