[package]
name = "moros_cup"
version = "0.1.0"
description = "Private fixed-ticket World Cup prediction markets on Solana"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "moros_cup"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "=1.0.0"
anchor-spl = { version = "=1.0.0", features = ["token"] }
solana-poseidon = "=3.0.0"
base64ct = "=1.6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
