[package]
name = "nortia"
version = "0.1.0"
description = "Private resolver-backed prediction markets on Solana"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "nortia"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "=1.0.2"
anchor-spl = { version = "=1.0.2", features = ["token"] }
solana-poseidon = "=3.0.0"
solana-sha256-hasher = "=3.1.0"
base64ct = "=1.6.0"
pyth-solana-receiver-sdk = "=2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
